// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Does not render address summary when shippingAsBilling is false 1`] = `
<PaymentMethod
  checkout={
    Object {
      "billingAddress": Object {},
      "paymentMethod": Object {
        "collapsed": false,
        "selectedMethod": "card",
      },
      "shippingAddress": Object {
        "city": "Test City",
        "first_name": "Test First Name",
        "last_name": "Test Last Name",
        "line_1": "Test Address 1",
        "line_2": "Test Address 2",
        "zipcode": "Test Postcode",
      },
      "shippingAddressAsBillingAddress": false,
    }
  }
  setShippingBillingAddress={[Function]}
>
  <div
    aria-label="Payment method"
    className="o-form"
  >
    <h3>
      Payment Method
    </h3>
    <div>
      <PaymentMethodSelector
        currentMethod="card"
        onPaymentMethodChanged={undefined}
      >
        <div
          className="o-form"
        >
          <div
            aria-label="Use credit or debit card"
            className="c-payment-method-button c-payment-method-button__active"
            onClick={[Function]}
          >
            <span>
              Credit/Debit Card
            </span>
          </div>
          <div
            aria-label="Use paypal"
            className="c-payment-method-button "
            onClick={[Function]}
          >
            <span>
              PayPal
            </span>
          </div>
        </div>
      </PaymentMethodSelector>
      <StripePayment
        checkout={
          Object {
            "billingAddress": Object {},
            "paymentMethod": Object {
              "collapsed": false,
              "selectedMethod": "card",
            },
            "shippingAddress": Object {
              "city": "Test City",
              "first_name": "Test First Name",
              "last_name": "Test Last Name",
              "line_1": "Test Address 1",
              "line_2": "Test Address 2",
              "zipcode": "Test Postcode",
            },
            "shippingAddressAsBillingAddress": false,
          }
        }
        setShippingBillingAddress={[Function]}
      >
        <div
          className="o-form__wrapper"
        >
          <Component>
            <p>
              Mocked Card Fields
            </p>
          </Component>
          <div
            className="o-form__input-group"
          >
            <label>
              Billing address *
            </label>
          </div>
          <Input
            formName={undefined}
            label="Same as shipping address"
            name="shippingAddressAsBillingAddress"
            onBlur={undefined}
            onChange={undefined}
            type="checkbox"
            value={false}
          >
            <div
              className="o-form__input-group"
            >
              <div>
                <input
                  checked={false}
                  className="o-form__input-field"
                  id="shippingAddressAsBillingAddress"
                  name="shippingAddressAsBillingAddress"
                  onBlur={[Function]}
                  onChange={[Function]}
                  placeholder={undefined}
                  required={undefined}
                  type="checkbox"
                  value=""
                />
                <label
                  className="o-form__label"
                  htmlFor="shippingAddressAsBillingAddress"
                >
                  Same as shipping address
                </label>
              </div>
            </div>
          </Input>
          <AddressForm
            addressType="billing"
            aria-label="Billing address form"
            checkout={
              Object {
                "billingAddress": Object {},
                "paymentMethod": Object {
                  "collapsed": false,
                  "selectedMethod": "card",
                },
                "shippingAddress": Object {
                  "city": "Test City",
                  "first_name": "Test First Name",
                  "last_name": "Test Last Name",
                  "line_1": "Test Address 1",
                  "line_2": "Test Address 2",
                  "zipcode": "Test Postcode",
                },
                "shippingAddressAsBillingAddress": false,
              }
            }
            formName="billingAddress"
            onBlur={undefined}
            onChange={undefined}
            onShowField={undefined}
            onToggleCollapsed={undefined}
            title="Billing Address"
          >
            <div
              className="o-form"
            >
              <h3>
                Billing Address
              </h3>
              <form
                className="o-form__wrapper"
              >
                <DropdownSelect
                  formName="billingAddress"
                  label="Country"
                  name="country_code"
                  onBlur={undefined}
                  onChange={undefined}
                  options={
                    Array [
                      Object {
                        "id": 1,
                        "title": "United Kingdom",
                        "value": "GB",
                      },
                      Object {
                        "id": 2,
                        "title": "United States",
                        "value": "US",
                      },
                    ]
                  }
                  prompt="Select country"
                  required={true}
                  value={undefined}
                >
                  <div
                    className="o-form__input-group"
                  >
                    <label
                      className="o-form__label"
                      htmlFor="country_code"
                    >
                      Country
                       *
                    </label>
                    <select
                      className="o-form__input-block o-form__input-field"
                      id="country_code"
                      name="country_code"
                      onBlur={[Function]}
                      onChange={[Function]}
                      required={true}
                      role="listbox"
                      value={undefined}
                    >
                      <option
                        aria-posinset="0"
                        aria-setsize={2}
                        role="option"
                      >
                        Select country
                      </option>
                      <option
                        aria-posinset={1}
                        aria-setsize={2}
                        key="0"
                        role="option"
                        value={
                          Object {
                            "id": 1,
                            "title": "United Kingdom",
                            "value": "GB",
                          }
                        }
                      >
                        United Kingdom
                      </option>
                      <option
                        aria-posinset={2}
                        aria-setsize={2}
                        key="1"
                        role="option"
                        value={
                          Object {
                            "id": 2,
                            "title": "United States",
                            "value": "US",
                          }
                        }
                      >
                        United States
                      </option>
                    </select>
                  </div>
                </DropdownSelect>
                <div
                  className="o-flex o-flex__space-between"
                >
                  <div
                    className="o-flex-full-width-s"
                  >
                    <Input
                      className="o-form__input-block"
                      formName="billingAddress"
                      label="First Name"
                      name="first_name"
                      onBlur={undefined}
                      onChange={undefined}
                      required={true}
                      type="text"
                      value={undefined}
                    >
                      <div
                        className="o-form__input-group"
                      >
                        <div>
                          <label
                            className="o-form__label"
                            htmlFor="first_name"
                          >
                            First Name
                             *
                          </label>
                          <input
                            checked={false}
                            className="o-form__input-field o-form__input-block"
                            id="first_name"
                            name="first_name"
                            onBlur={[Function]}
                            onChange={[Function]}
                            placeholder={undefined}
                            required={true}
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                    </Input>
                  </div>
                  <div
                    className="o-flex-full-width-s"
                  >
                    <Input
                      className="o-form__input-block"
                      formName="billingAddress"
                      label="Last Name"
                      name="last_name"
                      onBlur={undefined}
                      onChange={undefined}
                      required={true}
                      type="text"
                      value={undefined}
                    >
                      <div
                        className="o-form__input-group"
                      >
                        <div>
                          <label
                            className="o-form__label"
                            htmlFor="last_name"
                          >
                            Last Name
                             *
                          </label>
                          <input
                            checked={false}
                            className="o-form__input-field o-form__input-block"
                            id="last_name"
                            name="last_name"
                            onBlur={[Function]}
                            onChange={[Function]}
                            placeholder={undefined}
                            required={true}
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                    </Input>
                  </div>
                </div>
                <a
                  href="#"
                  onClick={[Function]}
                >
                  <p>
                    + Add Company Name (optional)
                  </p>
                </a>
                <Input
                  className="o-form__input-block"
                  formName="billingAddress"
                  label="Address 1"
                  name="line_1"
                  onBlur={undefined}
                  onChange={undefined}
                  required={true}
                  type="text"
                  value={undefined}
                >
                  <div
                    className="o-form__input-group"
                  >
                    <div>
                      <label
                        className="o-form__label"
                        htmlFor="line_1"
                      >
                        Address 1
                         *
                      </label>
                      <input
                        checked={false}
                        className="o-form__input-field o-form__input-block"
                        id="line_1"
                        name="line_1"
                        onBlur={[Function]}
                        onChange={[Function]}
                        placeholder={undefined}
                        required={true}
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </Input>
                <a
                  href="#"
                  onClick={[Function]}
                >
                  <p>
                    + Add Address 2 (optional)
                  </p>
                </a>
                <Input
                  className="o-form__input-block"
                  formName="billingAddress"
                  label="Post Code"
                  name="zipcode"
                  onBlur={undefined}
                  onChange={undefined}
                  required={true}
                  type="text"
                  value={undefined}
                >
                  <div
                    className="o-form__input-group"
                  >
                    <div>
                      <label
                        className="o-form__label"
                        htmlFor="zipcode"
                      >
                        Post Code
                         *
                      </label>
                      <input
                        checked={false}
                        className="o-form__input-field o-form__input-block"
                        id="zipcode"
                        name="zipcode"
                        onBlur={[Function]}
                        onChange={[Function]}
                        placeholder={undefined}
                        required={true}
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </Input>
                <Input
                  className="o-form__input-block"
                  formName="billingAddress"
                  label="City"
                  name="city"
                  onBlur={undefined}
                  onChange={undefined}
                  required={true}
                  type="text"
                  value={undefined}
                >
                  <div
                    className="o-form__input-group"
                  >
                    <div>
                      <label
                        className="o-form__label"
                        htmlFor="city"
                      >
                        City
                         *
                      </label>
                      <input
                        checked={false}
                        className="o-form__input-field o-form__input-block"
                        id="city"
                        name="city"
                        onBlur={[Function]}
                        onChange={[Function]}
                        placeholder={undefined}
                        required={true}
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </Input>
                <Input
                  className="o-form__input-block"
                  formName="billingAddress"
                  label="County"
                  name="state"
                  onBlur={undefined}
                  onChange={undefined}
                  required={true}
                  type="text"
                  value={undefined}
                >
                  <div
                    className="o-form__input-group"
                  >
                    <div>
                      <label
                        className="o-form__label"
                        htmlFor="state"
                      >
                        County
                         *
                      </label>
                      <input
                        checked={false}
                        className="o-form__input-field o-form__input-block"
                        id="state"
                        name="state"
                        onBlur={[Function]}
                        onChange={[Function]}
                        placeholder={undefined}
                        required={true}
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </Input>
                <Input
                  className="o-form__input-block"
                  formName="billingAddress"
                  label="Phone"
                  name="primary_phone"
                  onBlur={undefined}
                  onChange={undefined}
                  placeholder="In case Questions Arise"
                  required={true}
                  type="tel"
                  value={undefined}
                >
                  <div
                    className="o-form__input-group"
                  >
                    <div>
                      <label
                        className="o-form__label"
                        htmlFor="primary_phone"
                      >
                        Phone
                         *
                      </label>
                      <input
                        checked={false}
                        className="o-form__input-field o-form__input-block"
                        id="primary_phone"
                        name="primary_phone"
                        onBlur={[Function]}
                        onChange={[Function]}
                        placeholder="In case Questions Arise"
                        required={true}
                        type="tel"
                        value=""
                      />
                    </div>
                  </div>
                </Input>
                <Input
                  className="o-form__input-block"
                  formName="billingAddress"
                  label="Email"
                  name="email"
                  onBlur={undefined}
                  onChange={undefined}
                  placeholder="To Receive Order Confirmation"
                  required={true}
                  type="email"
                  value={undefined}
                >
                  <div
                    className="o-form__input-group"
                  >
                    <div>
                      <label
                        className="o-form__label"
                        htmlFor="email"
                      >
                        Email
                         *
                      </label>
                      <input
                        checked={false}
                        className="o-form__input-field o-form__input-block"
                        id="email"
                        name="email"
                        onBlur={[Function]}
                        onChange={[Function]}
                        placeholder="To Receive Order Confirmation"
                        required={true}
                        type="email"
                        value=""
                      />
                    </div>
                  </div>
                </Input>
                <p>
                  * Denotes required fields
                </p>
              </form>
            </div>
          </AddressForm>
        </div>
      </StripePayment>
    </div>
    <div
      aria-label="Use gift card or rewards code"
      className="o-form__wrapper"
    >
      <p>
        + Use a Gift Card / Rewards Code
      </p>
    </div>
  </div>
</PaymentMethod>
`;

exports[`Renders correct address summary when shippingAsBilling is true 1`] = `
<PaymentMethod
  checkout={
    Object {
      "billingAddress": Object {},
      "paymentMethod": Object {
        "collapsed": false,
        "selectedMethod": "card",
      },
      "shippingAddress": Object {
        "city": "Test City",
        "first_name": "Test First Name",
        "last_name": "Test Last Name",
        "line_1": "Test Address 1",
        "line_2": "Test Address 2",
        "zipcode": "Test Postcode",
      },
      "shippingAddressAsBillingAddress": true,
    }
  }
  setShippingBillingAddress={[Function]}
>
  <div
    aria-label="Payment method"
    className="o-form"
  >
    <h3>
      Payment Method
    </h3>
    <div>
      <PaymentMethodSelector
        currentMethod="card"
        onPaymentMethodChanged={undefined}
      >
        <div
          className="o-form"
        >
          <div
            aria-label="Use credit or debit card"
            className="c-payment-method-button c-payment-method-button__active"
            onClick={[Function]}
          >
            <span>
              Credit/Debit Card
            </span>
          </div>
          <div
            aria-label="Use paypal"
            className="c-payment-method-button "
            onClick={[Function]}
          >
            <span>
              PayPal
            </span>
          </div>
        </div>
      </PaymentMethodSelector>
      <StripePayment
        checkout={
          Object {
            "billingAddress": Object {},
            "paymentMethod": Object {
              "collapsed": false,
              "selectedMethod": "card",
            },
            "shippingAddress": Object {
              "city": "Test City",
              "first_name": "Test First Name",
              "last_name": "Test Last Name",
              "line_1": "Test Address 1",
              "line_2": "Test Address 2",
              "zipcode": "Test Postcode",
            },
            "shippingAddressAsBillingAddress": true,
          }
        }
        setShippingBillingAddress={[Function]}
      >
        <div
          className="o-form__wrapper"
        >
          <Component>
            <p>
              Mocked Card Fields
            </p>
          </Component>
          <div
            className="o-form__input-group"
          >
            <label>
              Billing address *
            </label>
          </div>
          <Input
            formName={undefined}
            label="Same as shipping address"
            name="shippingAddressAsBillingAddress"
            onBlur={undefined}
            onChange={undefined}
            type="checkbox"
            value={true}
          >
            <div
              className="o-form__input-group"
            >
              <div>
                <input
                  checked={true}
                  className="o-form__input-field"
                  id="shippingAddressAsBillingAddress"
                  name="shippingAddressAsBillingAddress"
                  onBlur={[Function]}
                  onChange={[Function]}
                  placeholder={undefined}
                  required={undefined}
                  type="checkbox"
                  value={true}
                />
                <label
                  className="o-form__label"
                  htmlFor="shippingAddressAsBillingAddress"
                >
                  Same as shipping address
                </label>
              </div>
            </div>
          </Input>
          <div
            aria-label="Shipping address to be used for billing"
            className="o-payment-method__address-summary"
          >
            <h4>
              Test First Name Test Last Name
            </h4>
            <p>
              Test Address 1
            </p>
            <p>
              Test Address 2
            </p>
            <p>
              Test City
            </p>
            <p>
              Test Postcode
            </p>
          </div>
        </div>
      </StripePayment>
    </div>
    <div
      aria-label="Use gift card or rewards code"
      className="o-form__wrapper"
    >
      <p>
        + Use a Gift Card / Rewards Code
      </p>
    </div>
  </div>
</PaymentMethod>
`;
